add header and API key

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+
+    <!-- Header -->
+<header>
+    <h1>Weather Dashboard</h1>
+    <p>Enter a city name to see current and future weather conditions!</p>
+</header>
+    <!-- Search Bar -->
+
+ 
     <script src="/assets/script.js"></script>
 </body>
 </html>
