add pseudo code

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <p>Enter a city name to see current and future weather conditions!</p>
 </header>
     <!-- Search Bar -->
-<form> 
-    <label for="city-name">City name:</label>
-    <input type="text" id="city-name" name="city-name"><br><br>
-    <input type="submit" id="submit-btn" value="Submit">
+<form id="search-form"> 
+    <input type="text" id="city-input" placeholder="City Name">
+    <button id="submit-btn">Search</button>
 </form> 
  
     <script src="./assets/script.js"></script>
