fix search functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <input type="text" id="city-input" placeholder="City Name">
     <button id="submit-btn">Search</button>
 </form> 
+<!-- Current weather card -->
+<div id="current-weather">
+    
+</div>
  
     <script src="./assets/script.js"></script>
 </body>
