add 5 day forecast functionality

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <button id="submit-btn">Search</button>
 </form> 
 <!-- Current weather card -->
-<div id="current-weather">
-    
+<div id="current-weather"></div>
+<!-- 5 day forecast cards -->
+<div id="forecast-cards">
+<div id="day1forecast"></div>
+<div id="day2forecast"></div>
+<div id="day3forecast"></div>
+<div id="day4forecast"></div>
+<div id="day5forecast"></div>
 </div>
- 
+
     <script src="./assets/script.js"></script>
 </body>
 </html>
