add storage functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <input type="text" id="city-input" placeholder="City Name">
     <button id="submit-btn">Search</button>
 </form> 
+<!-- Saved search buttons -->
+<div id="saved-searches">
+
+</div>
 <!-- Current weather card -->
 <div id="current-weather"></div>
 <!-- 5 day forecast cards -->
