--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Header -->
 <header>
-    <h1>Weather Dashboard</h1>
+    <h1>Weather or Not</h1>
     <p>Enter a city name to see current and future weather conditions!</p>
 </header>
     <!-- Search Bar -->
